<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77000000"
    android:padding="25dp"
    tools:context="com.monstertoss.swl.SettingsActivity">

    <com.monstertoss.swl.CustomSeekbar
        android:id="@+id/columns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:max="9"
        app:text="@string/columns" />

    <com.monstertoss.swl.CustomSeekbar
        android:id="@+id/rows"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/columns"
        app:max="9"
        app:text="@string/rows" />

    <com.monstertoss.swl.CustomSeekbar
        android:id="@+id/margin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/rows"
        app:max="140"
        app:text="@string/margin" />

    <com.monstertoss.swl.CustomSeekbar
        android:id="@+id/dotSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/margin"
        app:max="20"
        app:text="@string/dotSize" />

    <com.monstertoss.swl.CustomSeekbar
        android:id="@+id/lineSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/dotSize"
        app:max="20"
        app:text="@string/lineSize" />

    <com.monstertoss.swl.CustomSeekbar
        android:id="@+id/colorHue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/lineSize"
        app:max="360"
        app:text="@string/color" />


    <Button
        android:id="@+id/restartApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="#22ffffff"
        android:padding="25dp"
        android:text="@string/restartApp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/colorHue" />

</android.support.constraint.ConstraintLayout>
